
  * Added option to rename podcast channel name
  * Added option in Preferences -> Playback the option to write the complete output pipeline
  * Added Seeked mpris2 signal
  * Fixed amazon cover download engine

2012-02-03 0.3.5

  * Allow to select tracks from album browser zoon cover mode
  * Added load defaults in shortcuts preferences
  * Added cue support
  * Allow to change language from Preferences -> General
  * All playlists but the dynamic playlists with sort defined can be sorted
    by any criteria.
  * Added collections support. You can define as many collections as you want.

2011-05-13 0.3.1

  * Added {al1}, {au1}, {bl1} and {bu1} to lyrics panel patterns for
    lower/upper first letter of artist name and album name.
  * Added compositor and album artist to select context menus
  * Added a new panel with a tree view of the library
  * Added option to enable save ratings and playcounts to audio files
  * Changed command line behaviour to append the tracks to the playlist and
    play it if it was not already playing.
  * Sound menu integration in Ubuntu 11.04 natty
  * Added shortcuts configurable from preferences

2011-02-17 0.2.9

  * Added posibility to add more lyrics sources or edit existing ones
  * Implemented stop after current track using shift + click on stop button
  * Added more options for Copy To patterns
    {al}  : artist in lower case
    {au}  : artist in upper case
    {a1}  : first letter of artist
    {aal} : album artist in lower case
    {aau} : album artist in upper case
    {aa1} : first letter of album artist
    {A}   : album artist if not empty or artist otherwise
    {Al}  : {A} in lower case
    {Au}  : {A} in upper case
    {A1}  : first letter of {A}
    {bl}  : album in lower case
    {bu}  : album in upper case
    {b1}  : first letter of album
    {cl}  : composer in lower case
    {cu}  : composer in upper case
    {c1}  : first letter of composer
    {gl}  : genre in lower case
    {gu}  : genre in upper case